--- a/biblio.bib
+++ b/biblio.bib
@@ -295,7 +295,6 @@
 	pages = {309--339},
 }
 
-
 @book{shapiro_lectures_2009,
 	title = {Lectures on {Stochastic} {Programming}: {Modeling} and {Theory}},
 	isbn = {978-0-89871-687-0 978-0-89871-875-1},
@@ -308,4 +307,20 @@
 	month = jan,
 	year = {2009},
 	doi = {10.1137/1.9780898718751},
+}
+
+@article{morales_scenario_2009,
+	title = {Scenario {Reduction} for {Futures} {Market} {Trading} in {Electricity} {Markets}},
+	volume = {24},
+	copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+	issn = {0885-8950, 1558-0679},
+	url = {http://ieeexplore.ieee.org/document/4801580/},
+	doi = {10.1109/TPWRS.2009.2016072},
+	number = {2},
+	urldate = {2024-07-15},
+	journal = {IEEE Transactions on Power Systems},
+	author = {Morales, J.M. and Pineda, S. and Conejo, A.J. and Carrion, M.},
+	month = may,
+	year = {2009},
+	pages = {878--888},
 }
